Redesigned and documented

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name             = X11-MinimalGLViewport
+name             = X11-MinimalOpenGLViewport
 version          = 0.00
 abstract         = Bare minimum interactions with XLib needed to create an OpenGL Viewport
 author           = Michael Conrad <mike@nrdvana.net>
