--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name             = X11-MinimalOpenGLViewport
-version          = 0.00
-abstract         = Bare minimum interactions with XLib needed to create an OpenGL Viewport
+version          = 0.00_00
+abstract         = Bare minimum interactions with XLib needed to create an OpenGL Context
 author           = Michael Conrad <mike@nrdvana.net>
 license          = Perl_5
 copyright_holder = Michael Conrad
